2019-06-28 Fúlvio Alves <fga.fulvio@gmail.com>

	* Option to hide left or right part of the keypad
	* Replace fraction mode combo box with a single toggle button

2019-06-23 Fúlvio Alves <fga.fulvio@gmail.com>

	* Portuguese (Brazil) translation

2019-06-19 Nejc Bertoncelj <nejc@bertoncelj.eu.org>

	* Slovenian translation

2019-06-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Restore keypad button hover appearance after long press

2019-06-11 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Hide tooltip after keypad button click

2019-05-24 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Allow multiple "to"-conversions in one expression (e.g. "5 m/s to hex to ft to h = 0xE6AF.1E*ft∕h)
	* Option to clear history on exit
	* Support specification of number of bits for hexadecimal "to" conversion (4 to hex16 = 0004)

2019-05-21 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Divide value with time units by hours if time format is used

2019-05-19 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Do not add current calculation again to history after removing (or moving) history item, when calculate-as-you-type is activated
	* Do not clear result after removal of history item, if not the current result was removed

2019-05-17 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Reduce the height of the result widget

2019-05-15 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Support for automatic updates of self-contained binaries
	* Add check for updates menu item

2019-05-12 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Fix report bug on Windows

2019-05-06 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Improved handling of vectors and matrices in insert function dialog
	* Fixes and improvements for old gtk versions
	* --without-local-help configure option
	* Configurable time limit for plot

2019-05-02 Hanna Knutsson <hanna.knutsson@protonmail.com>

	* Gnome shell search provider

2019-05-01 Hanna Knutsson <hanna.knutsson@protonmail.com>
