@@ -1,4 +1,9 @@
-2019-06-28 Fúlvio Alves <fga.fulvio@gmail.com>
+2019-07-02 Hanna Knutsson <hanna.knutsson@protonmail.com>
+
+	* Fix and improve display of division
+	* Improve display of roots
+
+2019-06-28 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
 	* Option to hide left or right part of the keypad
 	* Replace fraction mode combo box with a single toggle button
